--- a/style.css
+++ b/style.css
@@ -1,82 +1,136 @@
 :root {
-  --navbar-backgroundColor: #1b1b1b;
-  --accent-color: #f0f4f5;
+  /* Color */
+  --white-color: #fff;
+  --black-color: #140a00;
+  --blue-color: #045fd4;
+  --red-color: #ff0000;
+  --grey-dark-color: #909090;
+  --grey-light-color: #e0e0e0;
+
+  /* Size */
+  --padding: 12px;
+  --avatar-size: 36px;
+
+  /* Font Size */
+  --font-large: 18px;
+  --font-medium: 14px;
+  --font-small: 12px;
+  --font-micro: 10px;
 }
 
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
 body {
-  margin: 0;
+  font-family: Roboto;
 }
 
-.navbar {
+ul {
+  list-style: none;
+}
+
+button,
+button:focus {
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+/* Header */
+header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  background-color: var(--navbar-backgroundColor);
-  padding: 0 12px;
-  height: 45px;
+  padding: var(--padding);
+  background-color: var(--black-color);
+  color: var(--white-color);
 }
 
-.navbar__logo {
-  font-size: 20px;
+header .logo {
+  font-size: var(--font-large);
 }
 
-.navbar__logo i {
-  color: #d50000;
+header .logo i {
+  color: var(--red-color);
 }
 
-.navbar__logo a {
-  text-decoration: none;
-  color: var(--accent-color);
-  font-family: 'Roboto', sans-serif;
+header .icons .fa-search {
+  margin-right: var(--padding);
 }
 
-.navbar__icons {
-  list-style: none;
-  display: flex;
-  padding-left: 0;
+/* Video Player */
+.player {
+  position: sticky;
+  top: 0;
+  text-align: center;
+  background-color: var(--black-color);
 }
 
-.navbar__icons i {
-  padding: 4px 4px;
-  font-size: 17px;
-  color: var(--accent-color);
-}
-
-.video {
+.player video {
   width: 100%;
-  height: 280px;
+  height: 100%;
+  max-width: 1000px;
 }
 
-.hashtag {
+/* Video Info*/
+.info {
+  padding: var(--padding);
+}
+
+.info .metadata .hashtags {
   display: flex;
-  padding-left: 10px;
-  margin: 0;
+  font-size: var(--font-small);
+  color: var(--blue-color);
 }
 
-.hashtag li {
-  list-style: none;
-  padding: 8px;
-  padding-left: 0;
+.info .metadata .hashtags li {
+  margin-right: var(--padding);
 }
 
-.hashtag a {
-  text-decoration: none;
-  font-size: 14px;
-  font-family: 'Noto Sans KR', sans-serif;
-}
-
-.title {
-  font-family: 'Noto Sans KR', sans-serif;
+.info .metadata .titleAndButton {
   display: flex;
-  padding: 0 10px;
-  margin: 0;
-  justify-content: space-between;
 }
 
-.title li {
-  list-style: none;
+.info .metadata .titleAndButton .title {
+  font-size: var(--font-medium);
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  margin-right: var(--padding);
 }
+
+.info .metadata .titleAndButton .moreBtn {
+  height: 100%;
+}
+
+.info .views {
+  font-size: var(--font-small);
+  color: var(--grey-dark-color);
+}
+
+.actions {
+  display: flex;
+  justify-content: space-around;
+  margin: var(--padding) 0;
+}
+
+.actions button {
+  display: flex;
+  flex-direction: column;
+  font-size: var(--font-small);
+  color: var(--grey-dark-color);
+}
+
+.actions button i {
+  margin: 0 auto;
+  margin-bottom: calc(var(--padding) / 2);
+  font-size: 16px;
+}
+
+.actions button i.active {
+  color: var(--blue-color);
+}
+
+/* Channel Discription*/
