--- a/style.css
+++ b/style.css
@@ -8,11 +8,13 @@
   --grey-light-color: #e0e0e0;
 
   /* Size */
-  --padding: 12px;
+  --spacing: 12px;
+  --spacing-small: 6px;
   --avatar-size: 36px;
 
   /* Font Size */
-  --font-large: 18px;
+  --font-large: 20px;
+  --font-regular: 16px;
   --font-medium: 14px;
   --font-small: 12px;
   --font-micro: 10px;
@@ -37,12 +39,14 @@ button:focus {
   border: none;
   cursor: pointer;
   outline: none;
+  background: transparent;
 }
+
 /* Header */
 header {
   display: flex;
   justify-content: space-between;
-  padding: var(--padding);
+  padding: var(--spacing);
   background-color: var(--black-color);
   color: var(--white-color);
 }
@@ -56,10 +60,10 @@ header .logo i {
 }
 
 header .icons .fa-search {
-  margin-right: var(--padding);
+  margin-right: var(--spacing);
 }
 
-/* Video Player */
+/* Video player */
 .player {
   position: sticky;
   top: 0;
@@ -73,11 +77,12 @@ header .icons .fa-search {
   max-width: 1000px;
 }
 
-/* Video Info*/
-.info {
-  padding: var(--padding);
+/* Video info */
+.infoAndUpNext .info {
+  padding: var(--spacing);
 }
 
+/* Metadata */
 .info .metadata .hashtags {
   display: flex;
   font-size: var(--font-small);
@@ -85,7 +90,7 @@ header .icons .fa-search {
 }
 
 .info .metadata .hashtags li {
-  margin-right: var(--padding);
+  margin-right: var(--spacing);
 }
 
 .info .metadata .titleAndButton {
@@ -94,43 +99,153 @@ header .icons .fa-search {
 
 .info .metadata .titleAndButton .title {
   font-size: var(--font-medium);
+  margin-right: var(--spacing);
+}
+
+.info .metadata .titleAndButton .title.clamp {
   display: -webkit-box;
-  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
   overflow: hidden;
-  margin-right: var(--padding);
 }
 
 .info .metadata .titleAndButton .moreBtn {
   height: 100%;
+  transition: transform 300ms ease-in-out;
 }
 
-.info .views {
+.info .metadata .titleAndButton .moreBtn.clicked {
+  transform: rotate(180deg);
+}
+
+.info .metadata .views {
   font-size: var(--font-small);
   color: var(--grey-dark-color);
 }
 
-.actions {
+/* Action buttons */
+.info .actions {
   display: flex;
   justify-content: space-around;
-  margin: var(--padding) 0;
+  margin: var(--spacing) 0;
 }
 
-.actions button {
+.info .actions button {
   display: flex;
   flex-direction: column;
   font-size: var(--font-small);
   color: var(--grey-dark-color);
 }
 
-.actions button i {
+.info .actions button i {
   margin: 0 auto;
-  margin-bottom: calc(var(--padding) / 2);
-  font-size: 16px;
+  margin-bottom: var(--spacing-small);
+  font-size: var(--font-regular);
 }
 
-.actions button i.active {
+.info .actions button i.active {
   color: var(--blue-color);
 }
 
-/* Channel Discription*/
+/* Channel description */
+.info .channel {
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid var(--grey-light-color);
+  border-bottom: 1px solid var(--grey-light-color);
+}
+
+.info .channel .metadata {
+  display: flex;
+  align-items: center;
+  padding: var(--spacing-small) 0;
+}
+
+.info .channel .metadata img {
+  width: var(--avatar-size);
+  height: var(--avatar-size);
+  border-radius: 50%;
+  margin-right: var(--spacing);
+}
+
+.info .channel .metadata .info {
+  display: flex;
+  flex-direction: column;
+}
+
+.info .channel .metadata .info .name {
+  font-size: var(--font-medium);
+}
+
+.info .channel .metadata .info .subscribers {
+  font-size: var(--font-small);
+  color: var(--grey-dark-color);
+}
+
+.info .channel .subscribe {
+  text-transform: uppercase;
+  color: var(--red-color);
+  font-size: var(--font-medium);
+}
+
+/* Up next */
+.upNext {
+  padding: 0 var(--spacing);
+}
+
+.upNext > .title {
+  font-size: var(--font-medium);
+  color: var(--grey-dark-color);
+  margin-bottom: var(--spacing-small);
+}
+
+.upNext .item {
+  display: flex;
+  margin-top: var(--spacing);
+}
+
+.upNext .item .img {
+  flex-basis: 35%;
+  margin-right: var(--spacing);
+}
+
+.upNext .item .img img {
+  width: 100%;
+  height: 15vh;
+}
+
+.upNext .item .itemInfo {
+  flex-basis: 60%;
+  display: flex;
+  flex-direction: column;
+}
+
+.upNext .item .moreBtn {
+  flex-basis: 5%;
+  height: 100%;
+}
+
+.upNext .item .itemInfo .title {
+  font-size: var(--font-small);
+}
+
+.upNext .item .itemInfo .name,
+.upNext .item .itemInfo .views {
+  font-size: var(--font-micro);
+  color: var(--grey-dark-color);
+}
+
+.infoAndUpNext {
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  .infoAndUpNext {
+    flex-direction: row;
+  }
+
+  .upNext {
+    padding: var(--spacing);
+  }
+}
